--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <a href="mailto:herciualecsandru97@gmail.com" class="footer__link">herciualecsandru97@gmail.com</a>
             <ul class="social-list">
                 <li class="social-list__item">
-                    <a href="https://drive.google.com/file/d/1bUTp0TKBRGetk6WPsC8Vb1W2KYGrowq-/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/1UbkSe64TFLPjSqIGZtYAC_CwWjVvvzaV/view"
                         class="social-list__link"><i class="far fa-address-card"></i></a>
                 </li>
                 <li class="social-list__item">
@@ -140,7 +140,7 @@
                             class="fab fa-instagram"></i></a>
                 </li>
                 <li class="social-list__item">
-                    <a href="https://linkedin.com/in/alex-herciu-ba3b771b6"" class=" social-list__link"><i
+                    <a href="https://linkedin.com/in/alex-herciu-ba3b771b6" class=" social-list__link"><i
                             class="fab fa-linkedin"></i></a>
                 </li>
                 <li class="social-list__item">
