--- a/projects/portofolio-item.html
+++ b/projects/portofolio-item.html
@@ -43,7 +43,7 @@
         <main class="main">
         <!-- Pic with project-->
         <div class="content_img">
-          <a href="https://codepen.io/herciualexandru/pen/WNMVZow"><img src="/pics/YelpCamp.png"  width='100%' height='100%' alt="project pic"></a>
+          <a href="https://codepen.io/herciualexandru/pen/WNMVZow"><img src="/pics/explorerShop.png"  width='100%' height='100%' alt="project pic"></a>
           <div>Live Demo</div>
          </div>
 
