-update portofolio items

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                      <img src="pics/alxproj.png" alt="">
                   </div>
                   <div class="content">
-                     <h3>Basic JS</h3>
+                     <h3>Hometown guide</h3>
                      <p>Learning project</p>
                      <a href="/projects/portofolio-item-3.html" class="btn">read more</a>
                      
