--- a/projects/portofolio-item-5.html
+++ b/projects/portofolio-item-5.html
@@ -43,23 +43,23 @@
         <main class="main">
           <div class="main--description">
             <div class="main--img">
-              <img src="/projects/projectimgs/proj4.png" height="100%" alt="project pic">
-              <div><a class="preview--link" href="https://magical-figolla-45d9b6.netlify.app/ ">Live Demo</a></div>
+              <img src="/projects/projectimgs/proj5.png" height="100%" alt="project pic">
+              <div><a class="preview--link" href="https://profound-pudding-9bb39c.netlify.app/">Live Demo</a></div>
              </div>
            
             <div class="main--description--info">
               <h2>Description</h2>
-              <p>This app counter how manny points get a team in a basketball match . From this I learned about :</p>
+              <p>In this app I tried to replicate a simple black-jack game . From this I learned about :</p>
               <ul>
-                <li><em>Script Tag</em></li>
-                <li><em>Variables</em></li>
-                <li><em>Numbers</em></li>    
-                <li><em>Strings</em></li>
-                <li><em>Console.log()</em></li>
-                <li><em>Functions</em></li>      
-                <li><em>The DOM</em></li>      
-                <li><em>Manipulating DOM</em></li>      
-                <li><em>Functions</em></li>
+                <li><em>Arrays</em></li>
+                <li><em>Objects</em></li>
+                <li><em>Booleans</em></li>    
+                <li><em>If/else statements</em></li>
+                <li><em>Comparison operators</em></li>
+                <li><em>Logical operators</em></li>      
+                <li><em>For loops</em></li>      
+                <li><em>Math object</em></li>      
+                <li><em>Return statements</em></li>
             </ul>
             </div>
           </div>
